Update title and subtitle in index.html
Updated title and subtitle for strategic alignment and accuracy

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <div class="calculator-card">
     <div class="header">
         <div class="title-set">
-            <h1>Fit Assessment</h1>
-            <p class="subtitle">Strategic Infrastructure Audit Tool</p>
+            <h1>Strategic Factorial IT Assessment Tool</h1>
+            <p class="subtitle">How far in your HR to IT automation journey are you?</p>
         </div>
         <div class="logo-area">
             <div class="logo-dot"></div>
