Update title in Strategic Assessment Tool
New title

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="calculator-card">
     <div class="header">
         <div class="title-set">
-            <h1>Strategic Factorial IT Assessment Tool</h1>
+            <h1>Strategic Assessment Tool</h1>
             <p class="subtitle">How far in your HR to IT automation journey are you?</p>
         </div>
         <div class="logo-area">
