--- a/index.html
+++ b/index.html
@@ -10,17 +10,23 @@
 <body>
 
 <div class="calculator-card">
-    <div class="header">
-        <div class="title-set">
-            <h1>Strategic Assessment Tool</h1>
-            <p class="subtitle">How far in your HR to IT automation journey are you?</p>
-        </div>
-        <div class="logo-area">
-            <div class="logo-dot"></div>
-            <span class="logo-text">factorial IT</span>
+    <div class="header-branding">
+    <div class="top-bar">
+        <span class="brand-logo">Factorial IT</span>
+        <span class="brand-tagline">The all-in-one IT management platform</span>
+    </div>
+    <div class="hero-section">
+        <h1 class="main-headline">IT operations in <span class="highlight-coral">autopilot</span> & <br>enterprise-grade <span class="highlight-coral">security</span> <br>connected to <span class="highlight-dark">HR data</span></h1>
+        <div class="hero-logo-bottom">
+             <div class="logo-dot"></div>
+             <span class="logo-text">factorial IT</span>
         </div>
     </div>
-
+    <div class="title-set">
+        <h2>Strategic Factorial IT Assessment Tool</h2>
+        <p class="subtitle">How far in your HR to IT automation journey are you?</p>
+    </div>
+</div>
     <form id="calcForm">
         <div class="section-title">I. Core Infrastructure</div>
         <div class="grid">
