Update header branding to use an image
Replaced the branding section with a header image.

--- a/index.html
+++ b/index.html
@@ -10,21 +10,9 @@
 <body>
 
 <div class="calculator-card">
-    <div class="header-branding">
-    <div class="top-bar">
-        <span class="brand-logo">Factorial IT</span>
-        <span class="brand-tagline">The all-in-one IT management platform</span>
-    </div>
-    <div class="hero-section">
-        <h1 class="main-headline">IT operations in <span class="highlight-coral">autopilot</span> & <br>enterprise-grade <span class="highlight-coral">security</span> <br>connected to <span class="highlight-dark">HR data</span></h1>
-        <div class="hero-logo-bottom">
-             <div class="logo-dot"></div>
-             <span class="logo-text">factorial IT</span>
-        </div>
-    </div>
+    <div class="header-image-container">
+    <img src="FactorialIT_Hero.png" alt="Factorial IT Hero" class="centered-hero">
     <div class="title-set">
-        <h2>Strategic Factorial IT Assessment Tool</h2>
-        <p class="subtitle">How far in your HR to IT automation journey are you?</p>
     </div>
 </div>
     <form id="calcForm">
