Update image source and add title elements

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
 <div class="calculator-card">
     <div class="header-image-container">
-    <img src="FactorialIT_Hero.png" alt="Factorial IT Hero" class="centered-hero">
+    <img src="factorial_it_logo.png" alt="Factorial IT" class="centered-logo">
     <div class="title-set">
+        <h2>Strategic Factorial IT Assessment Tool</h2>
+        <p class="subtitle">How far in your HR to IT automation journey are you?</p>
     </div>
 </div>
     <form id="calcForm">
