Replace logo image with a new frame image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div class="calculator-card">
     <div class="header-image-container">
-        <img src="factorial_it_logo.png" alt="Factorial IT" class="centered-logo">
+        <img src="Frame.png" alt="Factorial IT" class="centered-frame-hero">
         <div class="title-set">
             <h2>Strategic Factorial IT Assessment Tool</h2>
             <p class="subtitle">How far in your HR to IT automation journey are you?</p>
