Update title and labels in index.html

--- a/index.html
+++ b/index.html
@@ -3,49 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Factorial IT Assessment</title>
+    <title>Factorial IT | Strategic Assessment</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 </head>
 <body>
 
 <div class="calculator-card">
-    <div class="header-image-container">
-        <img src="Frame.png" alt="Factorial IT Operations" class="centered-frame-hero">
+    <div class="header-container">
+        <img src="Frame.png" alt="Factorial IT Hero" class="brand-hero">
     </div>
 
     <form id="calcForm">
         <div class="section-title">I. Core Infrastructure</div>
         <div class="grid">
-            <div class="input-field"><label># Managed Devices [cite: 1, 10]</label><input type="number" id="devices" placeholder="e.g. 50"></div>
-            <div class="input-field"><label>IT Team Size [cite: 1, 10]</label><input type="number" id="it_team" placeholder="e.g. 2"></div>
-            <div class="input-field"><label>Annual Onboarding [cite: 1, 10]</label><input type="number" id="ob_year" placeholder="e.g. 15"></div>
+            <div class="input-field"><label># Managed Devices</label><input type="number" id="devices" placeholder="e.g. 50"></div>
+            <div class="input-field"><label>IT Team Size</label><input type="number" id="it_team" placeholder="e.g. 2"></div>
+            <div class="input-field"><label>Annual Onboarding</label><input type="number" id="ob_year" placeholder="e.g. 15"></div>
         </div>
 
         <div class="section-title">II. Compliance & Frameworks</div>
         <div class="grid">
-            <div class="input-field"><label>NIS2 [cite: 1, 10]</label><select id="nis2"><option value="0">No</option><option value="2">Yes</option></select></div>
-            <div class="input-field"><label>ISO 27001 [cite: 1, 10]</label><select id="iso"><option value="0">No</option><option value="2">Yes</option></select></div>
-            <div class="input-field"><label>SOC2 [cite: 1, 10]</label><select id="soc2"><option value="0">No</option><option value="2">Yes</option></select></div>
-            <div class="input-field"><label>HIPAA [cite: 1, 10]</label><select id="hipaa"><option value="0">No</option><option value="2">Yes</option></select></div>
+            <div class="input-field"><label>NIS2</label><select id="nis2"><option value="0">No</option><option value="2">Yes</option></select></div>
+            <div class="input-field"><label>ISO 27001</label><select id="iso"><option value="0">No</option><option value="2">Yes</option></select></div>
+            <div class="input-field"><label>SOC2</label><select id="soc2"><option value="0">No</option><option value="2">Yes</option></select></div>
+            <div class="input-field"><label>HIPAA</label><select id="hipaa"><option value="0">No</option><option value="2">Yes</option></select></div>
         </div>
 
         <div class="section-title">III. Operations & Heterogeneity</div>
         <div class="grid">
-            <div class="input-field"><label>Remote/Hybrid [cite: 1, 10]</label><select id="remote"><option value="0">No</option><option value="2">Yes</option></select></div>
-            <div class="input-field"><label>Ticketing System [cite: 4, 10]</label><select id="ticketing"><option value="2">No (Manual)</option><option value="0">Yes (Automated)</option></select></div>
+            <div class="input-field"><label>Remote/Hybrid</label><select id="remote"><option value="0">No</option><option value="2">Yes</option></select></div>
+            <div class="input-field"><label>Ticketing System</label><select id="ticketing"><option value="2">No (Manual)</option><option value="0">Yes (Automated)</option></select></div>
         </div>
 
         <div class="grid" style="margin-top:20px;">
             <div class="checkbox-group">
-                <label><input type="checkbox" class="hw" value="1"> Laptop [cite: 1, 10]</label>
-                <label><input type="checkbox" class="hw" value="1"> Phone [cite: 1, 10]</label>
-                <label><input type="checkbox" class="hw" value="1"> iPad [cite: 1, 10]</label>
+                <label><input type="checkbox" class="hw" value="1"> Laptop</label>
+                <label><input type="checkbox" class="hw" value="1"> Phone</label>
+                <label><input type="checkbox" class="hw" value="1"> iPad</label>
             </div>
             <div class="checkbox-group">
-                <label><input type="checkbox" class="os" value="1"> Windows [cite: 1, 10]</label>
-                <label><input type="checkbox" class="os" value="1"> iOS [cite: 1, 10]</label>
-                <label><input type="checkbox" class="os" value="1"> Linux [cite: 1, 10]</label>
+                <label><input type="checkbox" class="os" value="1"> Windows</label>
+                <label><input type="checkbox" class="os" value="1"> iOS</label>
+                <label><input type="checkbox" class="os" value="1"> Linux</label>
             </div>
         </div>
 
@@ -66,11 +66,11 @@
     <div id="recapArea" class="pdf-recap-grid"></div>
     <h3 class="pdf-sub">Scoring Methodology Recap</h3>
     <div class="methodology-content">
-        <p><strong>I. Scalable Infrastructure Penalty:</strong> +2.0 per every ten devices. </p>
-        <p><strong>II. Compliance:</strong> +2.0 per framework (NIS2, ISO27001, SOC2, HIPAA). [cite: 1, 10]</p>
-        <p><strong>III. Operational Environment:</strong> +2.0 for Remote/Hybrid; +2.0 if IT Staff ≤ 2; +2.0 if OB > 12/yr. [cite: 1, 10]</p>
-        <p><strong>IV. Asset Heterogeneity:</strong> +2.0 if |Hardware Set| > 1; +2.0 if |OS Set| > 1. [cite: 1, 10]</p>
-        <p><strong>V. Procedural Automation:</strong> +2.0 if Ticketing is absent. [cite: 4, 10]</p>
+        <p><strong>I. Scalable Infrastructure Penalty:</strong> +2.0 per every ten devices[cite: 10].</p>
+        <p><strong>II. Certification:</strong> +2.0 per framework (NIS2, ISO27001, SOC2, HIPAA).</p>
+        <p><strong>III. Operational Environment:</strong> +2.0 for Remote/Hybrid; +2.0 if IT Staff ≤ 2; +2.0 if OB > 12/yr.</p>
+        <p><strong>IV. Asset Heterogeneity:</strong> +2.0 if |Hardware Set| > 1; +2.0 if |OS Set| > 1.</p>
+        <p><strong>V. Procedural Automation:</strong> +2.0 if Ticketing is absent.</p>
     </div>
 </div>
 
