--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div class="calculator-card">
     <div class="header-container">
-        <img src="Frame.jpg" alt="Factorial IT Hero" class="brand-hero">
+        <img src="Frame.png" alt="Factorial IT" class="brand-hero">
     </div>
 
     <form id="calcForm">
