--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Factorial IT | Fit Assessment</title>
+    <title>Factorial IT Assessment</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 </head>
@@ -11,7 +11,7 @@
 
 <div class="calculator-card">
     <div class="header-container">
-        <img src="Frame.png" alt="Factorial IT" class="brand-hero">
+        <img src="Frame.png" alt="Factorial IT Hero" class="brand-hero">
     </div>
 
     <form id="calcForm">
