--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div class="calculator-card">
     <div class="header-container">
-        <img src="Framewhite.png" alt="Factorial IT Hero" class="brand-hero">
+        <img src="https://gmorettin99.github.io/AssessmentFactorialIT/Framewhite.png" alt="Factorial IT Hero" class="brand-hero">
     </div>
 
     <form id="calcForm">
@@ -101,31 +101,11 @@
     </form>
 </div>
 
-<div id="pdf-template" style="display:none;">
-    <div class="pdf-header">
-        <h1 style="color:#ff585d; margin:0;">Account Fit Report</h1>
-        <p style="margin:0; font-weight:700;">FACTORIAL IT STRATEGIC AUDIT 2026</p>
-    </div>
-    <div class="score-result-box">
-        <span class="score-label">Weighted Fit Score</span><br>
-        <span id="finalScore" class="score-value">0</span>
-    </div>
-    <h3 class="pdf-sub">Input Recap</h3>
-    <div id="recapArea" class="pdf-recap-grid"></div>
-    <h3 class="pdf-sub">Scoring Methodology Recap</h3>
-    <div class="methodology-content">
-        <p><strong>I. Infrastructure:</strong> +2.0 per decile unit.</p>
-        <p><strong>II. Compliance:</strong> +2.0 per framework.</p>
-        <p><strong>III. Operations:</strong> +2.0 for Remote, IT Staff ≤ 2, or High Onboarding.</p>
-        <p><strong>IV. Heterogeneity:</strong> +2.0 if Hardware Set > 1 or OS Set > 1.</p>
-    </div>
-</div>
-
 <script src="svg-assets.js"></script> 
 
-<script src="script.js"></script>
-
 <script src="pdf-generator.js"></script>
+
+<script src="script.js"></script>
     
 </body>
 </html>
