--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <div class="calculator-card">
     <div id="pdf-template">
         <div class="header-container">
-            <img src="https://gmorettin99.github.io/AssessmentFactorialIT/Framewhite.png" alt="Factorial IT Hero" class="brand-hero">
+            <img src="https://gmorettin99.github.io/AssessmentFactorialIT/pillars.jpg" 
+                crossorigin="anonymous" 
+                alt="Pillars Structure" 
+                style="width: 100%; max-width: 600px; display: block; margin: 0 auto 20px auto;">
         </div>
 
         <form id="calcForm">
