--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="calculator-card">
     <div id="pdf-template">
         <div class="header-container">
-            <img src="https://gmorettin99.github.io/AssessmentFactorialIT/pillars.jpg" 
+            <img src="https://gmorettin99.github.io/AssessmentFactorialIT/Framewhite.png" 
                 crossorigin="anonymous" 
                 alt="Pillars Structure" 
                 style="width: 100%; max-width: 600px; display: block; margin: 0 auto 20px auto;">
