--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         <div class="header-container">
             <img src="https://gmorettin99.github.io/AssessmentFactorialIT/Framewhite.png" 
                 crossorigin="anonymous" 
-                alt="Pillars Structure" 
-                class="brand-hero">
+                alt="Factorial IT" 
+                class="brand-hero"
+                style="width: 100%; max-width: 600px; display: block; margin: 0 auto 20px auto;">
         </div>
 
         <form id="calcForm">
@@ -45,7 +46,7 @@
 
                 <div class="layout-col">
                     <div class="section-title">II. Compliance & Frameworks</div>
-                    <div class="grid-4-col">
+                    <div class="grid-2-col">
                         <div class="input-field">
                             <label>NIS2</label>
                             <select id="nis2"><option value="0">No</option><option value="2">Yes</option></select>
