--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="calculator-card">
     <div id="pdf-template">
         <div class="header-container">
-            <img src="https://gmorettin99.github.io/AssessmentFactorialIT/Framewhite.png" 
+            <img src="./Framewhite.png" 
                 crossorigin="anonymous" 
                 alt="Factorial IT" 
                 class="brand-hero"
