--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
 <div class="calculator-card">
     <div id="pdf-template">
         <div class="header-container">
-            <img src="./Framewhite.png" 
-                crossorigin="anonymous" 
-                alt="Factorial IT" 
-                class="brand-hero"
-                style="width: 100%; max-width: 600px; display: block; margin: 0 auto 20px auto;">
+            <img src="https://gmorettin99.github.io/AssessmentFactorialIT/Framewhite.png" alt="Factorial IT Hero" class="brand-hero">
         </div>
 
         <form id="calcForm">
@@ -24,18 +20,14 @@
             <div class="layout-row">
                 <div class="layout-col">
                     <div class="section-title">I. Core Infrastructure</div>
-                    <div class="grid-2-col">
-                        <div class="input-field">
-                            <label>Total Employees</label>
-                            <input type="number" id="employees" placeholder="e.g. 30">
-                        </div>
+                    <div class="grid-3-col">
                         <div class="input-field">
                             <label># Managed Devices</label>
-                            <input type="number" id="devices" placeholder="e.g. 60">
+                            <input type="number" id="devices" placeholder="e.g. 50">
                         </div>
                         <div class="input-field">
                             <label>IT Team Size</label>
-                            <input type="number" id="it_team" placeholder="e.g. 1">
+                            <input type="number" id="it_team" placeholder="e.g. 2">
                         </div>
                         <div class="input-field">
                             <label>Annual Onboarding</label>
@@ -46,7 +38,7 @@
 
                 <div class="layout-col">
                     <div class="section-title">II. Compliance & Frameworks</div>
-                    <div class="grid-2-col">
+                    <div class="grid-4-col">
                         <div class="input-field">
                             <label>NIS2</label>
                             <select id="nis2"><option value="0">No</option><option value="2">Yes</option></select>
@@ -104,13 +96,9 @@
                     <path d="M22 2L11 13" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M22 2L15 22L11 13L2 9L22 2Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
-                Generate Assessment
             </button>
         </form>
-    </div> 
-</div> 
-
-<script src="pdf-generator.js"></script>
+    </div> </div> <script src="pdf-generator.js"></script>
 <script src="script.js"></script>
     
 </body>
