--- a/index.html
+++ b/index.html
@@ -18,46 +18,50 @@
         <form id="calcForm">
             
             <div class="layout-row">
-                <div class="layout-col">
-                    <div class="section-title">I. Core Infrastructure</div>
-                    <div class="grid-3-col">
-                        <div class="input-field">
-                            <label># Managed Devices</label>
-                            <input type="number" id="devices" placeholder="e.g. 50">
-                        </div>
-                        <div class="input-field">
-                            <label>IT Team Size</label>
-                            <input type="number" id="it_team" placeholder="e.g. 2">
-                        </div>
-                        <div class="input-field">
-                            <label>Annual Onboarding</label>
-                            <input type="number" id="ob_year" placeholder="e.g. 15">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="layout-col">
-                    <div class="section-title">II. Compliance & Frameworks</div>
-                    <div class="grid-4-col">
-                        <div class="input-field">
-                            <label>NIS2</label>
-                            <select id="nis2"><option value="0">No</option><option value="2">Yes</option></select>
-                        </div>
-                        <div class="input-field">
-                            <label>ISO 27001</label>
-                            <select id="iso"><option value="0">No</option><option value="2">Yes</option></select>
-                        </div>
-                        <div class="input-field">
-                            <label>HIPAA</label>
-                            <select id="hipaa"><option value="0">No</option><option value="2">Yes</option></select>
-                        </div>
-                        <div class="input-field">
-                            <label>SOC2</label>
-                            <select id="soc2"><option value="0">No</option><option value="2">Yes</option></select>
-                        </div>
-                    </div>
-                </div>
+    <div class="layout-col">
+        <div class="section-title">I. Core Infrastructure</div>
+        <div class="grid-2-col-infra">
+            <div class="input-field">
+                <label># Managed Devices (n)</label>
+                <input type="number" id="devices" placeholder="e.g. 50">
             </div>
+            <div class="input-field">
+                <label># Employees (m)</label>
+                <input type="number" id="employees" placeholder="e.g. 40">
+            </div>
+            <div class="input-field">
+                <label>IT Team Size</label>
+                <input type="number" id="it_team" placeholder="e.g. 2">
+            </div>
+            <div class="input-field">
+                <label>Annual Onboarding</label>
+                <input type="number" id="ob_year" placeholder="e.g. 15">
+            </div>
+        </div>
+    </div>
+
+    <div class="layout-col">
+        <div class="section-title">II. Compliance & Frameworks</div>
+        <div class="grid-2-col-compliance">
+            <div class="input-field">
+                <label>NIS2</label>
+                <select id="nis2"><option value="0">No</option><option value="1">Yes</option></select>
+            </div>
+            <div class="input-field">
+                <label>ISO 27001</label>
+                <select id="iso"><option value="0">No</option><option value="1">Yes</option></select>
+            </div>
+            <div class="input-field">
+                <label>HIPAA</label>
+                <select id="hipaa"><option value="0">No</option><option value="1">Yes</option></select>
+            </div>
+            <div class="input-field">
+                <label>SOC2</label>
+                <select id="soc2"><option value="0">No</option><option value="1">Yes</option></select>
+            </div>
+        </div>
+    </div>
+</div>
 
             <div class="layout-row">
                 <div class="layout-col">
